Convert Serialize usage to JSON (Fixes #20) Rewrote Installer to be cleaner and easier to process changes. Fixed buffer issue (Fixes #27)
Signed-off-by: jdarwood007 <unmonitored+github@sleepycode.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-patch.diff
-.git
+# SimpleDesk Ignores #
+#####################
+
+# Plugins #
+##########
+sd_plugins_lang/SDPlugin*.php
+sd_plugins_source/*
+css/helpdesk_custom.css
