--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,21 @@
+sudo: required
+
 language: php
 
 php:
-  - 5.3
+  - 5.4
+  - 5.5
   - 5.6
   - 7.0
+  - 7.1
+
+matrix:
+  include:
+    - php: hhvm
+      dist: trusty
 
 script:
+  - sudo add-apt-repository ppa:git-core/ppa -y
+  - sudo apt-get update
+  - sudo apt-get install git
   - if find . -name "*.php" ! -path "./vendor/*" -exec php -l {} 2>&1 \; | grep "syntax error, unexpected"; then exit 1; fi
