--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script:
   - sudo add-apt-repository ppa:git-core/ppa -y
   - sudo apt-get update
   - sudo apt-get install git
-  - if find . -name "*.php" ! -path "./vendor/*" -exec php -l {} 2>&1 \; | grep "syntax error, unexpected"; then exit 1; fi
+  - ./buildTools/runTools.sh
