Cleanup a bunch of files
Signed-off-by: jdarwood007 <unmonitored+github@sleepycode.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
 
 matrix:
   include:
     - php: hhvm
-      dist: trusty
+      dist: xenial
 
 script:
   - sudo add-apt-repository ppa:git-core/ppa -y
