--- a/.github/workflows/Javascript-Check.yml
+++ b/.github/workflows/Javascript-Check.yml
@@ -13,6 +13,10 @@ jobs:
     name: LINT Checks
     steps:
       - uses: actions/checkout@master
+        with:
+          submodules: true
+      - name: Update Build Tools
+        run: git submodule foreach git pull origin master
       - name: Javascript LINT
         uses: tj-actions/eslint-changed-files@v4
         with:
