--- a/.github/workflows/Javascript-Check.yml
+++ b/.github/workflows/Javascript-Check.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
         with:
-          submodules: true
+          submodules: false
       - name: Javascript LINT
         uses: tj-actions/eslint-changed-files@v4
         with:
