--- a/.github/workflows/Software-Check.yml
+++ b/.github/workflows/Software-Check.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
         with:
-          submodules: true
+          submodules: false
       - name: Checking Sign off
         id: check-signoff
         run: php ./.github/scripts/check-signed-off.php github
