--- a/.github/workflows/Javascript-Check.yml
+++ b/.github/workflows/Javascript-Check.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Javascript LINT
         uses: tj-actions/eslint-changed-files@v4
         with:
-          config-path: .github/configs/eslintrc.js
+          config-path: ./.github/configs/eslintrc.js
