Restore Build Tools (#170)
* Restore Build Tools

* Bad action

* No sub modules

* Change the year

--- a/.github/workflows/Javascript-Check.yml
+++ b/.github/workflows/Javascript-Check.yml
@@ -14,10 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
         with:
-          submodules: true
-      - name: Update Build Tools
-        run: git submodule foreach git pull origin master
+          submodules: false
       - name: Javascript LINT
         uses: tj-actions/eslint-changed-files@v4
         with:
-          config-path: buildTools/eslintrc.js
+          config-path: ./.github/configs/eslintrc.js
