--- a/.github/workflows/Software-Check.yml
+++ b/.github/workflows/Software-Check.yml
@@ -14,33 +14,27 @@ jobs:
     steps:
       - uses: actions/checkout@master
         with:
-          submodules: true
-      - name: Update Build Tools
-        run: git submodule foreach git pull origin master
+          submodules: false
       - name: Checking Sign off
         id: check-signoff
-        run: php ./buildTools/check-signed-off.php github
+        run: php ./.github/scripts/check-signed-off.php github
   check-licensing:
     runs-on: ubuntu-latest
     name: Check Licensing
     steps:
       - uses: actions/checkout@master
         with:
-          submodules: true
-      - name: Update Build Tools
-        run: git submodule foreach git pull origin master
+          submodules: false
       - name: Checking Licensing
         id: check-licensing
-        run: php ./buildTools/check-license-master.php ./
+        run: php ./.github/scripts/check-license-master.php ./
   check-eof:
     runs-on: ubuntu-latest
     name: Check End of File
     steps:
       - uses: actions/checkout@master
         with:
-          submodules: true
-      - name: Update Build Tools
-        run: git submodule foreach git pull origin master
+          submodules: false
       - name: Checking End of File
         id: check-eof
-        run: php ./buildTools/check-eof-master.php ./
+        run: php ./.github/scripts/check-eof-master.php ./
