Update Crowdin configuration file

--- a/.crowdin.yml
+++ b/.crowdin.yml
@@ -3,9 +3,9 @@ api_token_env: CROWDIN_API_TOKEN
 base_path: .
 base_url: 'https://api.crowdin.com'
 preserve_hierarchy: 1
-commit_message: "New translations for %language%"
-append_commit_message: false
-pull_request_title: "Crowdin Language Update"
+commit_message: New translations for %language%
+append_commit_message: 
+pull_request_title: Crowdin Language Update
 files:
   - source: sd_language/SimpleDesk.english.php
     translation: /sd_language/SimpleDesk.%language%.php
